Sat May 16 17:20:36 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Register.java: use enum for register
	  name.

	* net/loveruby/cflat/sysdep/x86/RegKind.java: new enum.

	* net/loveruby/cflat/sysdep/x86/Register.java: move system
	  dependent code to sysdep/x86/Register.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: reduce
	  dependency to Register method.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: use RegKind.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: reg(*) ->
	  ax(), bx(), cx(), ...

Wed May 13 03:22:46 2009  Minero Aoki  <aamine@loveruby.net>

	* compiler/Compiler.java: grand refactoring.

	* compiler/Options.java: refactoring: avoid ping-pong call with
	  SourceFile.

	* compiler/SourceFile.java: ditto.

	* ast/AST.java: does not contain a TypeTable.

	* compiler/IRGenerator.java

	* compiler/TypeResolver.java

	* compiler/TypeChecker.java

	* sysdep/Linker.java: change arg order.

	* sysdep/GNULinker.java: ditto.

Wed May 13 01:22:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/utils/CommandUtils.java: accept a list of
	  string instead of CommandArg.

	* net/loveruby/cflat/sysdep/Linker.java: ditto.

	* net/loveruby/cflat/sysdep/LinkerOptions.java: ditto.

	* net/loveruby/cflat/sysdep/GNULinker.java: ditto.

	* net/loveruby/cflat/sysdep/AssemblerOptions.java: ditto.

	* net/loveruby/cflat/sysdep/GNUAssembler.java: ditto.

	* net/loveruby/cflat/utils/CommandArgStr.java ->
	  compiler/LdOption.java

	* net/loveruby/cflat/utils/CommandArg.java -> compiler/LdArg.java

	* net/loveruby/cflat/compiler/SourceFile.java: CommandArg ->
	  LdArg.

	* net/loveruby/cflat/compiler/Compiler.java: ditto.

	* net/loveruby/cflat/compiler/Options.java: ditto.

Mon May 11 03:17:32 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: objectify assembler.

	* net/loveruby/cflat/compiler/Compiler.java: objectify linker.
